# Speed-Racer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ROADMAP_DEFINITIVO_v4.md  ROADMAP_MATHVIER_v5.md  arvore.txt  generate_issues.sh  plan.md  readme.md  resultado.md
assets/models/: obj file.mtl
assets/shaders/core/cube/: basic.frag  basic.vert
assets/shaders/core/cube/compiled/: vert.spv
docs/: Architecture.md  Core_Modules.md  Diary.md  README.md  Rendering.md  Resources.md  lixo.md
include/core/: BufferManager.hpp  CommandManager.hpp  Handle.hpp  Mesh.hpp  ModelLoader.hpp  PipelineManager.hpp  RenderPassManager.hpp  ResourceManager.hpp  ResourceTypes.hpp  ScopedBuffer.hpp  ShaderManager.hpp  SwapchainManager.hpp  VmaWrapper.hpp  VulkanManager.hpp  WindowManager.hpp  logicalDevice.hpp  physicalDevice.hpp  queueManager.hpp
include/core/VulkanUtils/: VulkanTools.hpp
src/app/: main.cpp
src/core/: BufferManager.cpp  CommandManager.cpp  Mesh.cpp  ModelLoader.cpp  PipelineManager.cpp  RenderPassManager.cpp  ResourceManager.cpp  ScopedBuffer.cpp  ShaderManager.cpp  SwapchainManager.cpp  VmaWrapper.cpp  VulkanManager.cpp  WindowManager.cpp  logicalDevice.cpp  physicalDevice.cpp  queueManager.cpp
src/core/VulkanTools/: VulkanTools.cpp
tools/: build_and_run.sh  rapid.sh  run.sh
tools/renderdoc/: settings.cap
trash/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  codebase  erro.txt  newtest.cpp
